@@ -6,6 +6,13 @@ However contributors are encouraged to add their own entries for their work.
 
 Note that build 228 was the last version supporting Python 2.
 
+Since build 301:
+----------------
+* Merged win2kras into win32ras. In the unlikely case that anyone is still
+  using win2kras, there is a win2kras.py that imports all of win32ras. If you
+  import win2kras and it fails with 'you must import win32ras first', then it
+  means an old win2kras.pyd exists, which you should remove.
+
 Since build 300:
 ----------------
 * Fix some confusion on how dynamic COM object properties work. The old
